# sem5

./: .gitignore  .gitmodules  Dockerfile  LICENSE  alembic.ini  docker-compose-test.yml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 099f93fee4bd_heatlinebuffer_created.py  1664cf156df6_heatline_model.py
app/: main.py
app/api/v1/: ai.py  geo.py  map.py
app/core/: db.py
app/dependecies/: citygen.py  db.py  geo.py
app/dto/: dto.py
app/models/: HeatLine.py
app/repositories/: geo.py
app/serializers/: city_layot_to_geojson.py
app/services/: ai.py  geo.py  services.py
app/tests/: test_generate_route.py
citygen/: branches.py  city_border.py  config.py  generate.py  generate_node.py  houses.py  roads.py
