[project]
name = "project-sem5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.121.3",
    "pydantic>=2.12.4",
    "shapely>=2.1.2",
    "sqlalchemy[asyncio]>=2.0.44",
    "uvicorn>=0.38.0",
]
