[project]
name = "project-sem5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.121.3",
    "httpx>=0.28.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "psycopg[binary]>=3.2.12",
    "pydantic>=2.12.4",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "shapely>=2.1.2",
    "sqlalchemy[asyncio]>=2.0.44",
    "trio>=0.32.0",
    "uvicorn>=0.38.0",
]

[tool.pytest.ini_options]
anyio_backend = "asyncio"
pythonpath = "."




